--- a/pallets/template/Cargo.toml
+++ b/pallets/template/Cargo.toml
@@ -9,37 +9,40 @@ std = [
 default-features = false
 features = ['derive']
 package = 'parity-scale-codec'
-version = '1.3.6'
+version = '2.0.0'
 
 [dependencies.frame-support]
 default-features = false
 git = 'https://github.com/paritytech/substrate.git'
 branch = 'rococo-v1'
-version = '2.0.0'
+version = '3.0.0'
 
 [dependencies.frame-system]
 default-features = false
 git = 'https://github.com/paritytech/substrate.git'
 branch = 'rococo-v1'
-version = '2.0.0'
+version = '3.0.0'
+
+[dev-dependencies]
+serde = { version = "1.0.101" }
 
 [dev-dependencies.sp-core]
 default-features = false
 git = 'https://github.com/paritytech/substrate.git'
 branch = 'rococo-v1'
-version = '2.0.0'
+version = '3.0.0'
 
 [dev-dependencies.sp-io]
 default-features = false
 git = 'https://github.com/paritytech/substrate.git'
 branch = 'rococo-v1'
-version = '2.0.0'
+version = '3.0.0'
 
 [dev-dependencies.sp-runtime]
 default-features = false
 git = 'https://github.com/paritytech/substrate.git'
 branch = 'rococo-v1'
-version = '2.0.0'
+version = '3.0.0'
 
 [package]
 authors = ['Anonymous']
@@ -50,7 +53,7 @@ license = 'Unlicense'
 name = 'pallet-template'
 readme = 'README.md'
 repository = 'https://github.com/paritytech/substrate/'
-version = '2.0.0'
+version = '3.0.0'
 
 [package.metadata.docs.rs]
 targets = ['x86_64-unknown-linux-gnu']
