--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -14,6 +14,7 @@ targets = ["x86_64-unknown-linux-gnu"]
 codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
 
 orderbook-engine = { path = "../pallets/Engine", version = "0.1.0", default-features = false }
+assets = { path = "../pallets/Assets", version = "0.1.0", default-features = false }
 pallet-aura = { version = "3.0.0", default-features = false }
 pallet-balances = { version = "3.0.0", default-features = false }
 frame-support = { version = "3.0.0", default-features = false }
@@ -76,7 +77,8 @@ std = [
     "sp-transaction-pool/std",
     "sp-version/std",
     "frame-system/std",
-    "frame-system-rpc-runtime-api/std"
+    "frame-system-rpc-runtime-api/std",
+    "assets/std",
 ]
 runtime-benchmarks = [
     "sp-runtime/runtime-benchmarks",
