--- a/pallets/Engine/Cargo.toml
+++ b/pallets/Engine/Cargo.toml
@@ -8,8 +8,15 @@ std = [
     'serde',
     'sp-core/std',
     'sp-std/std',
+    'frame-benchmarking/std'
 ]
 runtime-benchmarks = ["frame-benchmarking"]
+
+
+[dependencies.frame-benchmarking]
+default-features = false
+version ="3.0.0"
+optional = true
 
 [dependencies.serde]
 version = "1.0.101"
@@ -44,7 +51,6 @@ version = '3.0.0'
 [dependencies.sp-runtime]
 default-features = false
 version = '3.0.0'
-optional = true
 
 [package]
 authors = ['Anonymous']
