--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ panic = 'unwind'
 [workspace]
 members = [
     'node',
-    'pallets/Assets',
+    'pallets/Polkadex_Fungible_Assets',
     'primitives',
     'runtime',
     "orml/vesting",
