--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -13,7 +13,7 @@ targets = ["x86_64-unknown-linux-gnu"]
 [dependencies]
 codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
 
-assets = { path = "../pallets/Assets", version = "0.1.0", default-features = false }
+polkadex-fungible-assets = { path = "../pallets/Polkadex_Fungible_Assets", version = "0.1.0", default-features = false }
 pallet-aura = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
 pallet-balances = {git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
 frame-support = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
@@ -82,7 +82,7 @@ std = [
     "sp-version/std",
     "frame-system/std",
     "frame-system-rpc-runtime-api/std",
-    "assets/std",
+    "polkadex-fungible-assets/std",
     "orml-vesting/std",
     "orml-currencies/std",
     "orml-tokens/std",
@@ -99,5 +99,5 @@ runtime-benchmarks = [
     "frame-system/runtime-benchmarks",
     "pallet-balances/runtime-benchmarks",
     "pallet-timestamp/runtime-benchmarks",
-    "assets/runtime-benchmarks",
+    "polkadex-fungible-assets/runtime-benchmarks",
 ]
