--- a/pallets/token-faucet/Cargo.toml
+++ b/pallets/token-faucet/Cargo.toml
@@ -19,12 +19,15 @@ version = '2.0.0'
 [dependencies]
 frame-support = { default-features = false, version = '3.0.0' }
 frame-system = { default-features = false, version = '3.0.0' }
-
+parking_lot = '0.11'
+sp-keystore = { version = '0.9', optional = true }
+pallet-balances = { version = '3.0', default-features = false }
 [dev-dependencies]
 serde = { version = "1.0.119" }
 sp-core = { default-features = false, version = '3.0.0' }
 sp-io = { default-features = false, version = '3.0.0' }
 sp-runtime = { default-features = false, version = '3.0.0' }
+
 
 [features]
 default = ['std']
@@ -32,4 +35,5 @@ std = [
     'codec/std',
     'frame-support/std',
     'frame-system/std',
+    'sp-keystore/std',
 ]
