--- a/pallets/token-faucet/Cargo.toml
+++ b/pallets/token-faucet/Cargo.toml
@@ -14,7 +14,7 @@ codec = { package = "parity-scale-codec", version = "2.0.0", default-features = 
 frame-support = { default-features = false, version = '3.0.0' , git = "https://github.com/paritytech/substrate.git" }
 sp-runtime = { default-features = false, version = '3.0.0' , git = "https://github.com/paritytech/substrate.git" }
 sp-core = { default-features = false, version = '3.0.0' , git = "https://github.com/paritytech/substrate.git" }
-sp-keystore = "0.9.0"
+sp-keystore = { default-features = false, version = '0.9.0' , git = "https://github.com/paritytech/substrate.git" }
 pallet-balances = { default-features = false, version = '3.0.0' , git = "https://github.com/paritytech/substrate.git" }
 frame-system = { default-features = false, version = '3.0.0', git = "https://github.com/paritytech/substrate.git"  }
 polkadex-primitives = { path = "../../primitives", default-features = false }
