--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -89,7 +89,7 @@ orml-tokens = { git = "https://github.com/Gauthamastro/open-runtime-module-libra
 orml-currencies = { git = "https://github.com/Gauthamastro/open-runtime-module-library.git", default-features = false, branch="gj-substrate-master" }
 orml-traits = { git = "https://github.com/Gauthamastro/open-runtime-module-library.git", default-features = false, branch="gj-substrate-master" }
 # Local Dependecies
-polkadex-primitives = { git = "https://github.com/Polkadex-Substrate/polkadex-primitives.git", branch = 'gj-substrate-master', default-features = false }
+polkadex-primitives = { git = "https://github.com/Polkadex-Substrate/polkadex-primitives.git", branch = 'main', default-features = false }
 erc20-pdex-migration-pallet = { path = "../pallets/pdex-migration", default-features = false }
 polkadex-ido = { path = "../pallets/Polkadex_Ido", default-features = false }
 [build-dependencies]
