--- a/pallets/pdex-migration/Cargo.toml
+++ b/pallets/pdex-migration/Cargo.toml
@@ -17,6 +17,8 @@ pallet-balances = { default-features = false, git = "https://github.com/parityte
 frame-system = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
 pallet-sudo = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
 frame-benchmarking = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master", optional = true }
+sp-core = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master", optional= true}
+sp-io = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master", optional= true }
 
 [dev-dependencies]
 sp-core = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
@@ -33,6 +35,8 @@ std = [
 	'pallet-sudo/std'
 ]
 runtime-benchmarks = [
+	'sp-core/std',
+	'sp-io/std',
     "frame-benchmarking",
     'frame-support/runtime-benchmarks',
     'frame-system/runtime-benchmarks',
