--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -51,7 +51,7 @@ sc-authority-discovery = {  git = "https://github.com/paritytech/substrate", bra
 sc-consensus-babe = {  git = "https://github.com/paritytech/substrate", branch = "master" }
 sc-consensus-babe-rpc = {  git = "https://github.com/paritytech/substrate", branch = "master" }
 sc-consensus-epochs = {  git = "https://github.com/paritytech/substrate", branch = "master" }
-grandpa = {  git = "https://github.com/paritytech/substrate", branch = "master" ,package="sc-finality-grandpa"}
+grandpa = {  git = "https://github.com/paritytech/substrate", branch = "master", package="sc-finality-grandpa"}
 sc-finality-grandpa-rpc = {  git = "https://github.com/paritytech/substrate", branch = "master" }
 sc-keystore = {  git = "https://github.com/paritytech/substrate", branch = "master" }
 sc-network = {  git = "https://github.com/paritytech/substrate", branch = "master" }
@@ -66,7 +66,7 @@ sp-consensus = {  git = "https://github.com/paritytech/substrate", branch = "mas
 sp-consensus-babe = {  git = "https://github.com/paritytech/substrate", branch = "master" }
 sp-core = {  git = "https://github.com/paritytech/substrate", branch = "master" }
 sp-keystore = {  git = "https://github.com/paritytech/substrate", branch = "master" }
-grandpa-primitives = {  git = "https://github.com/paritytech/substrate", branch = "master" , package="sp-finality-grandpa"}
+grandpa-primitives = {  git = "https://github.com/paritytech/substrate", branch = "master", package="sp-finality-grandpa"}
 sp-inherents = {  git = "https://github.com/paritytech/substrate", branch = "master" }
 sp-timestamp = {  git = "https://github.com/paritytech/substrate", branch = "master" }
 sp-runtime = {  git = "https://github.com/paritytech/substrate", branch = "master" }
@@ -81,7 +81,7 @@ sc-transaction-pool-api = {  git = "https://github.com/paritytech/substrate", br
 sp-authority-discovery = {  git = "https://github.com/paritytech/substrate", branch = "master" }
 
 #Primitives
-polkadex-primitives = { git = "https://github.com/Polkadex-Substrate/polkadex-primitives.git", branch = 'gj-substrate-master'}
+polkadex-primitives = { git = "https://github.com/Polkadex-Substrate/polkadex-primitives.git", branch = 'master'}
 sc-executor = {  git = "https://github.com/paritytech/substrate", branch = "master" }
 
 
