--- a/pallets/ocex/Cargo.toml
+++ b/pallets/ocex/Cargo.toml
@@ -18,14 +18,14 @@ sp-io = {  git = "https://github.com/paritytech/substrate", branch = "master", v
 sp-core = {  git = "https://github.com/paritytech/substrate", branch = "master", version = "4.0.0-dev", default-features = false }
 sp-std = {  git = "https://github.com/paritytech/substrate", branch = "master", version = "4.0.0-dev", default-features = false }
 sp-runtime = {  git = "https://github.com/paritytech/substrate", default-features = false }
-polkadex-primitives = { git = "https://github.com/Polkadex-Substrate/polkadex-primitives", branch = "substrate-monthly-2021-09+1", default-features=false}
+polkadex-primitives = { git = "https://github.com/Polkadex-Substrate/polkadex-primitives", branch = "master", default-features=false}
 frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "master", version = "4.0.0-dev", default-features = false, optional = true }
 orml-currencies = { git = "https://github.com/Gauthamastro/open-runtime-module-library.git",  branch="gj-substrate-master", default-features = false }
 orml-tokens = { git = "https://github.com/Gauthamastro/open-runtime-module-library.git",  branch="gj-substrate-master", default-features = false }
 orml-traits = { git = "https://github.com/Gauthamastro/open-runtime-module-library.git",  branch="gj-substrate-master", default-features = false }
 
 pallet-balances = {git = "https://github.com/paritytech/substrate", branch = "master", version = "4.0.0-dev", default-features = false }
-pallet-substratee-registry = { package="pallet-teerex", git = "https://github.com/Polkadex-Substrate/pallet-substratee-registry", branch = "substrate-monthly-2021-09+1", default-features = false }
+pallet-substratee-registry = { package="pallet-teerex", git = "https://github.com/Polkadex-Substrate/pallet-substratee-registry", branch = "master", default-features = false }
 timestamp= {git = "https://github.com/paritytech/substrate.git", package = "pallet-timestamp",branch = "master", version = "4.0.0-dev", default-features = false}
 polkadex-sgx-primitives = {git = "https://github.com/Polkadex-Substrate/polkadexTEE-worker", branch = "monthly-2021-09+1", default-features=false}
 
