--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -92,11 +92,11 @@ orml-tokens = { git = "https://github.com/Gauthamastro/open-runtime-module-libra
 orml-traits = { git = "https://github.com/Gauthamastro/open-runtime-module-library.git",  branch="gj-substrate-master", default-features = false }
 
 # Local Dependecies
-polkadex-primitives = { git = "https://github.com/Polkadex-Substrate/polkadex-primitives.git", branch = 'gj-substrate-master', default-features = false }
+polkadex-primitives = { git = "https://github.com/Polkadex-Substrate/polkadex-primitives.git", branch = 'master', default-features = false }
 pallet-polkapool = { path = "../pallets/polkapool", default-features = false }
 erc20-pdex-migration-pallet = { path = "../pallets/pdex-migration", default-features = false }
 polkadex-ocex = { path = "../pallets/ocex", default-features = false }
-pallet-substratee-registry = { package="pallet-teerex", git = "https://github.com/Polkadex-Substrate/pallet-substratee-registry", branch = "substrate-monthly-2021-09+1", default-features = false }
+pallet-substratee-registry = { package="pallet-teerex", git = "https://github.com/Polkadex-Substrate/pallet-substratee-registry", branch = "master", default-features = false }
 
 [build-dependencies]
 substrate-wasm-builder = { git = "https://github.com/paritytech/substrate", branch = "master" }
