--- a/pallets/ocex/Cargo.toml
+++ b/pallets/ocex/Cargo.toml
@@ -8,28 +8,28 @@ edition = "2018"
 targets = ["x86_64-unknown-linux-gnu"]
 
 [dependencies]
-codec = { version = "2.2.0", package = "parity-scale-codec", default-features = false, features = ["derive"] }
+codec = { version = "2.0.0", package = "parity-scale-codec", default-features = false, features = ["derive"] }
 hex = { version = "2.1.0", package = "rustc-hex", default-features = false }
-serde = { version = "1.0.68", optional = true }
+serde = { version = "1.0.101", optional = true }
 
-frame-support = { git = "https://github.com/paritytech/substrate", tag = "monthly-2021-09+1", version = "4.0.0-dev", default-features = false }
-frame-system = { git = "https://github.com/paritytech/substrate", tag = "monthly-2021-09+1", version = "4.0.0-dev", default-features = false }
-sp-io = {  git = "https://github.com/paritytech/substrate", tag = "monthly-2021-09+1", version = "4.0.0-dev", default-features = false }
-sp-core = {  git = "https://github.com/paritytech/substrate", tag = "monthly-2021-09+1", version = "4.0.0-dev", default-features = false }
-sp-std = {  git = "https://github.com/paritytech/substrate", tag = "monthly-2021-09+1", version = "4.0.0-dev", default-features = false }
-sp-runtime = {  git = "https://github.com/paritytech/substrate", default-features = false }
-polkadex-primitives = { git = "https://github.com/Polkadex-Substrate/polkadex-primitives.git", branch = 'gj-substrate-master', default-features = false }
-frame-benchmarking = { git = "https://github.com/paritytech/substrate", tag = "monthly-2021-09+1", version = "4.0.0-dev", default-features = false, optional = true }
-orml-currencies = { git = "https://github.com/Gauthamastro/open-runtime-module-library.git",  branch="gj-substrate-master", default-features = false }
+frame-support = { git = "https://github.com/paritytech/substrate", branch = "master", version = "4.0.0-dev", default-features = false }
+frame-system = { git = "https://github.com/paritytech/substrate", branch = "master", version = "4.0.0-dev", default-features = false }
+sp-io = {  git = "https://github.com/paritytech/substrate", branch = "master", version = "4.0.0-dev", default-features = false }
+sp-core = {  git = "https://github.com/paritytech/substrate", branch = "master", version = "4.0.0-dev", default-features = false }
+sp-std = {  git = "https://github.com/paritytech/substrate", branch = "master", version = "4.0.0-dev", default-features = false }
+sp-runtime = {  git = "https://github.com/paritytech/substrate", branch = "master", version = "4.0.0-dev", default-features = false }
+polkadex-primitives = { git = "https://github.com/Polkadex-Substrate/polkadex-primitives", branch = "master", default-features=false}
+frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "master", version = "4.0.0-dev", default-features = false, optional = true }
 orml-tokens = { git = "https://github.com/Gauthamastro/open-runtime-module-library.git",  branch="gj-substrate-master", default-features = false }
-
-pallet-balances = {git = "https://github.com/paritytech/substrate", tag = "monthly-2021-09+1", version = "4.0.0-dev", default-features = false }
-pallet-substratee-registry = { package="pallet-teerex", git = "https://github.com/Polkadex-Substrate/pallet-substratee-registry", branch = "substrate-monthly-2021-09+1", default-features = false }
-timestamp= {git = "https://github.com/paritytech/substrate.git", package = "pallet-timestamp",tag = "monthly-2021-09+1", version = "4.0.0-dev", default-features = false}
-polkadex-sgx-primitives = {git = "https://github.com/Polkadex-Substrate/polkadexTEE-worker", branch = "monthly-2021-09+1", default-features=false}
+orml-currencies = { git = "https://github.com/Gauthamastro/open-runtime-module-library.git",  branch="gj-substrate-master", default-features = false }
+orml-traits = { git = "https://github.com/Gauthamastro/open-runtime-module-library.git",  branch="gj-substrate-master", default-features = false }
+pallet-balances = {git = "https://github.com/paritytech/substrate", branch = "master", version = "4.0.0-dev", default-features = false }
+pallet-substratee-registry = { package="pallet-teerex", git = "https://github.com/Polkadex-Substrate/pallet-substratee-registry", branch = "substrate-master", default-features = false }
+timestamp= {git = "https://github.com/paritytech/substrate.git", package = "pallet-timestamp",branch = "master", version = "4.0.0-dev", default-features = false}
+polkadex-sgx-primitives = {git = "https://github.com/Polkadex-Substrate/polkadexTEE-worker", branch = "mz-substrate-master", default-features=false}
 
 [dev-dependencies]
-sp-keyring = {  git = "https://github.com/paritytech/substrate", tag = "monthly-2021-09+1", version = "4.0.0-dev", default-features = false }
+sp-keyring = {  git = "https://github.com/paritytech/substrate", branch = "master", version = "4.0.0-dev", default-features = false }
 
 [features]
 default = ["std"]
@@ -46,6 +46,7 @@ std = [
     "polkadex-primitives/std",
     "orml-tokens/std",
     "orml-currencies/std",
+    "orml-traits/std",
     "pallet-balances/std",
     "pallet-substratee-registry/std",
 ]
