--- a/pallets/Polkadex_Ido/common/Cargo.toml
+++ b/pallets/Polkadex_Ido/common/Cargo.toml
@@ -13,7 +13,7 @@ serde = { version = "1.0.68", features = ["derive"], optional = true }
 sp-core = {  git = "https://github.com/paritytech/substrate", default-features = false, branch = "master"  }
 sp-std = {  git = "https://github.com/paritytech/substrate", default-features = false, branch = "master"  }
 sp-runtime = {  git = "https://github.com/paritytech/substrate", default-features = false, branch = "master"  }
-polkadex-primitives = { git = "https://github.com/Polkadex-Substrate/polkadex-primitives.git", branch = 'master', default-features = false }
+polkadex-primitives = { git = "https://github.com/Polkadex-Substrate/polkadex-primitives.git", branch = 'gj-substrate-master', default-features = false }
 
 [features]
 default = ["std"]
