--- a/contracts/uniswap_v2/Cargo.toml
+++ b/contracts/uniswap_v2/Cargo.toml
@@ -9,12 +9,12 @@ resolver = "2"
 overflow-checks = false
 
 [dependencies]
-ink_primitives = { version = "3.0.0-rc6", default-features = false }
-ink_metadata = { version = "3.0.0-rc6", default-features = false, features = ["derive"], optional = true }
-ink_env = { version = "3.0.0-rc6", default-features = false }
-ink_storage = { version = "3.0.0-rc6", default-features = false }
-ink_lang = { version = "3.0.0-rc6", default-features = false }
-ink_prelude = { version = "=3.0.0-rc6", default-features = false }
+ink_primitives = { version = "3.0.0-rc6", git = "https://github.com/paritytech/ink", default-features = false }
+ink_metadata = { version = "3.0.0-rc6", git = "https://github.com/paritytech/ink", default-features = false, features = ["derive"], optional = true }
+ink_env = { version = "3.0.0-rc6", git = "https://github.com/paritytech/ink", default-features = false }
+ink_storage = { version = "3.0.0-rc6", git = "https://github.com/paritytech/ink", default-features = false }
+ink_lang = { version = "3.0.0-rc6", git = "https://github.com/paritytech/ink", default-features = false }
+ink_prelude = { version = "=3.0.0-rc6", git = "https://github.com/paritytech/ink", default-features = false }
 
 scale = { package = "parity-scale-codec", version = "2.1", default-features = false, features = ["derive", "full"] }
 scale-info = { version = "1.0.0", default-features = false, features = ["derive"], optional = false }
